Copied the bar plots from mode_specific_metrics notebook to generic_metrics notebook.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -672,6 +672,124 @@
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "881f2170",
+   "metadata": {},
+   "source": [
+    "## Mode Specific (Bar Charts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "601057fe",
+   "metadata": {},
+   "source": [
+    "### Average miles per trip for specified mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24dccf66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_title_no_quality=\"Average \" + label_units + \" for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\"\n",
+    "file_name ='average_miles_replaced_mode%s' % file_suffix\n",
+    "\n",
+    "try:\n",
+    "    dg=data_eb.groupby('Replaced_mode').agg({distance_col: ['sum', 'count' , 'mean']},)\n",
+    "    dg.columns = ['Total ('+label_units_lower+')', 'Count' ,'Average ('+label_units_lower+')']\n",
+    "    dg = dg.reset_index()\n",
+    "    dg = dg.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
+    "    data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average ('+label_units_lower+')'], ascending=False) \n",
+    "        \n",
+    "    x='Replaced_mode'\n",
+    "    y='Average ('+label_units_lower+')'\n",
+    "    y2 = \"Count\"\n",
+    "\n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    barplot_mode(data,x,y,plot_title, expanded_ct['Replaced_mode'].dropna().unique().tolist(), file_name)\n",
+    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average ('+label_units_lower+')'].values, data.Replaced_mode), file_name, plot_title)\n",
+    "\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14650196",
+   "metadata": {},
+   "source": [
+    "### Number of trips by day for specified mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ef2fe77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_title_no_quality=f\"Number of {mode_of_interest} trips by day\"\n",
+    "file_name =f'ntrips_{mode_of_interest}_per_day%s' % file_suffix\n",
+    "\n",
+    "try:\n",
+    "    fq_days = data_eb.groupby(['start_local_dt_day']).agg({'start_local_dt_day': ['sum', 'count']})\n",
+    "    fq_days = fq_days.reset_index()\n",
+    "    fq_days.columns = ['Day of the Month', 'Total', 'Number of Trips']\n",
+    "\n",
+    "    data = fq_days\n",
+    "    x = 'Day of the Month'\n",
+    "    y = 'Number of Trips'\n",
+    "\n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    barplot_day(data,x,y,plot_title,file_name)\n",
+    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month'].values), file_name, plot_title)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e807c0f1",
+   "metadata": {},
+   "source": [
+    "### Number of trips by day of week¶"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8085e9a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_title_no_quality=f\"Number of {mode_of_interest} trips by weekday\"\n",
+    "file_name =f'ntrips_{mode_of_interest}_per_weekday%s' % file_suffix\n",
+    "\n",
+    "try:\n",
+    "    fq_weekdays = data_eb.groupby(['start_local_dt_weekday']).agg({'start_local_dt_weekday': ['sum', 'count']})\n",
+    "    fq_weekdays = fq_weekdays.reset_index()\n",
+    "    fq_weekdays.columns = ['Weekday', 'Total', 'Number of Trips']\n",
+    "    weekday_labels = [\"Mon\", \"Tue\", \"Wed\", \"Thu\", \"Fri\", \"Sat\", \"Sun\"]\n",
+    "    fq_weekdays[\"Weekday\"] = fq_weekdays.Weekday.apply(lambda x: weekday_labels[x])\n",
+    "\n",
+    "    data = fq_weekdays\n",
+    "    x = 'Weekday'\n",
+    "    y = 'Number of Trips'\n",
+    "\n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    barplot_day(data,x,y,plot_title,file_name)\n",
+    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday'].values), file_name, plot_title)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+   ]
   }
  ],
  "metadata": {
