Added alt_text for stacked bar charts in generic metric notebook.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -172,7 +172,9 @@
     "    result_df = merge_dataframes(all_data_frames)\n",
     "\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + quality_text\n",
-    "    stacked_bar_chart_generic(plot_title, result_df, file_name, 2)  \n",
+    "    stacked_bar_chart_generic(plot_title, result_df, file_name, 2)\n",
+    "\n",
+    "    alt_text = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], \"100% Stacked Bar Charts\", plot_title)  \n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -222,6 +224,8 @@
     "\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Sensed: \" + u80_quality_text_sensed + \"\\n\" + \"For Labeled: \" + u80_quality_text\n",
     "    stacked_bar_chart_generic(plot_title, result_df_u80, file_name, 2)\n",
+    "\n",
+    "    alt_text = store_alt_text_stacked_bar_chart(result_df_u80[result_df_u80['Count'] > 0], file_name, plot_title)\n",
     "except Exception as e:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -260,6 +264,8 @@
     "    \n",
     "    plot_title = plot_title_no_quality + \"\\n\" + commute_quality_text\n",
     "    stacked_bar_chart_generic(plot_title, df_total_trip_commute, file_name, 1)\n",
+    "\n",
+    "    alt_text = store_alt_text_stacked_bar_chart(df_total_trip_commute, file_name, plot_title)\n",
     "except Exception as e:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -326,6 +332,8 @@
     "    result_df = merge_dataframes(all_data_frames)\n",
     "\n",
     "    stacked_bar_chart_generic(plot_title_no_quality, result_df, file_name, 3)\n",
+    "\n",
+    "    alt_text = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)\n",
     "except Exception as e:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -362,6 +370,7 @@
     "    result_tp_df = merge_dataframes(all_tp_data_frames)\n",
     "    \n",
     "    stacked_bar_chart_generic(plot_title_no_quality, result_tp_df, file_name, 2)\n",
+    "    alt_text = store_alt_text_stacked_bar_chart(result_tp_df[result_tp_df['Count'] > 0], file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -392,6 +401,7 @@
     "    df_replaced_trip = process_trip_data(labels_eb, values_eb, \"Replaced number of trips by e-bike\")\n",
     "\n",
     "    stacked_bar_chart_generic(plot_title, df_replaced_trip, file_name, 1)\n",
+    "    alt_text = store_alt_text_stacked_bar_chart(df_replaced_trip, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -434,7 +444,7 @@
     "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "    stacked_bar_chart_generic(plot_title, df_replaced_dist, file_name, 1)\n",
-    "    alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
+    "    alt_text = store_alt_text_stacked_bar_chart(df_replaced_dist, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
