--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -29,7 +29,7 @@
     "month = 11\n",
     "program = \"default\"\n",
     "study_type = \"study\"\n",
-    "mode_of_interest = None\n",
+    "mode_of_interest = \"None\"\n",
     "include_test_users = False\n",
     "dynamic_labels = {}\n",
     "use_imperial = False\n",
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = f'ntrips_mode_confirm{file_suffix}'\n",
+    "file_name = f'ntrips_total{file_suffix}'\n",
     "plot_title_no_quality= \"Number of trips for each mode (selected by users)\"\n",
     "\n",
     "try:\n",
@@ -195,7 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = f'ntrips_mode_under80{file_suffix}'\n",
+    "file_name = f'ntrips_under80{file_suffix}'\n",
     "plot_title_no_quality= \"Number of trips for 80th percentile for each mode (selected by users):\"\n",
     "\n",
     "try:\n",
@@ -208,7 +208,7 @@
     "    values_mc_u80 = expanded_ct.loc[(expanded_ct['distance'] <= cutoff)].Mode_confirm.value_counts(dropna=True).tolist()\n",
     "    u80_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"< \" + dist_threshold + \" \" + short_label, include_test_users)\n",
     "    df_confirmed_tc_u80 = process_trip_data(labels_mc_u80, values_mc_u80, \"Labeled by user \\n (Based on Confirmed Trips)\")\n",
-    "\n",
+    "    \n",
     "    cutoff_sensed = expanded_ct_sensed.distance.quantile(0.8)\n",
     "    if pd.isna(cutoff_sensed):\n",
     "        cutoff_sensed = 0\n",
@@ -392,7 +392,7 @@
    "outputs": [],
    "source": [
     "plot_title_no_quality=f\"Number of trips for each replaced mode by {mode_of_interest} only\"\n",
-    "file_name= f'ntrips_{mode_of_interest}_replace%s' % file_suffix\n",
+    "file_name= f'ntrips_{mode_of_interest}_replaced%s' % file_suffix\n",
     "\n",
     "try:\n",
     "    labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
@@ -591,12 +591,10 @@
     "\n",
     "try:\n",
     "    dist = expanded_ct_sensed.groupby('primary_mode').agg({distance_col: ['sum', 'count' , 'mean']})\n",
-    "    print(f\"{dist}\")\n",
     "    dist.columns = ['Total ('+label_units_lower+')', 'Count', 'Average ('+label_units_lower+')']\n",
     "    dist = dist.reset_index()\n",
     "    dist =dist.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
     "    \n",
-    "    print(f\"{dist}\")\n",
     "    data = dist.drop((dist.query(\"Count < 3\").index)).sort_values(by=['Average ('+label_units_lower+')'], ascending=False)\n",
     "    x='primary_mode'\n",
     "    y='Average ('+label_units_lower+')'\n",
