For Stacked Bar Charts: 1. Update the plots title. 2. rename file from mile to distance for stacked bar chart. 3. Fix the file name for commute trip.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -174,7 +174,7 @@
     "    plot_title = plot_title_no_quality + \"\\n\" + quality_text\n",
     "    stacked_bar_chart_generic(plot_title, result_df, file_name, 2)\n",
     "\n",
-    "    alt_text = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], \"100% Stacked Bar Charts\", plot_title)  \n",
+    "    alt_text = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)  \n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -246,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = \"ntrips_commute_mode_confirm{file_suffix}\"\n",
+    "file_name = f\"ntrips_commute_mode_confirm{file_suffix}\"\n",
     "plot_title_no_quality= \"Number of commute trips for each mode (selected by users)\"\n",
     "\n",
     "try:\n",
@@ -300,7 +300,7 @@
     "    for x, y in dist_dict.items():\n",
     "        labels_mc_dist.append(x)\n",
     "        values_mc_dist.append(y)    \n",
-    "    df_confirm_dist = process_trip_data(labels_mc_dist, values_mc_dist, \"Labeled by user \\n Trip distance\")\n",
+    "    df_confirm_dist = process_trip_data(labels_mc_dist, values_mc_dist, \"Labeled by user \\n Trip distance \\n (Based on Confirmed Trips)\")\n",
     "\n",
     "    dist_sensed = expanded_ct_sensed.groupby('primary_mode').agg({distance_col: ['sum', 'count' , 'mean']})\n",
     "    dist_sensed.columns = ['Total ('+label_units_lower+')', 'Count', 'Average ('+label_units_lower+')']\n",
@@ -312,7 +312,7 @@
     "    for x, y in dist_dict_sensed.items():\n",
     "        labels_pm_dist.append(x)\n",
     "        values_pm_dist.append(y)\n",
-    "    df_sensed_dist = process_trip_data(labels_pm_dist, values_pm_dist, \"Sensed by OpenPATH \\n Trip distance (Overall)\")\n",
+    "    df_sensed_dist = process_trip_data(labels_pm_dist, values_pm_dist, \"Sensed by OpenPATH \\n Trip distance (Overall) \\n (Based on Total Trips)\")\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + quality_text\n",
     "\n",
     "    dist_sensed_land = expanded_ct_sensed.groupby('primary_mode').agg({distance_col: ['sum', 'count' , 'mean']})\n",
@@ -326,12 +326,12 @@
     "        if x != \"AIR_OR_HSR\":\n",
     "            labels_pm_dist_land.append(x)\n",
     "            values_pm_dist_land.append(y)\n",
-    "    df_sensed_dist_land = process_trip_data(labels_pm_dist_land, values_pm_dist_land, \"Sensed by OpenPATH \\n Trips distance (Land)\")\n",
+    "    df_sensed_dist_land = process_trip_data(labels_pm_dist_land, values_pm_dist_land, \"Sensed by OpenPATH \\n Trips distance (Land) \\n (Based on Total Trips)\")\n",
     "    \n",
     "    all_data_frames = [df_confirm_dist,df_sensed_dist, df_sensed_dist_land]\n",
     "    result_df = merge_dataframes(all_data_frames)\n",
-    "\n",
-    "    stacked_bar_chart_generic(plot_title_no_quality, result_df, file_name, 3)\n",
+    "    print(plot_title)\n",
+    "    stacked_bar_chart_generic(plot_title, result_df, file_name, 3)\n",
     "\n",
     "    alt_text = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)\n",
     "except Exception as e:\n",
@@ -360,16 +360,17 @@
     "try:\n",
     "    labels_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
     "    values_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True).tolist()\n",
-    "    df_purpose_trip = process_trip_data(labels_tp, values_tp, \"Labeled by user \\n All Purpose Trips\")\n",
+    "    df_purpose_trip = process_trip_data(labels_tp, values_tp, \"Labeled by user \\n (Based on Total Purpose Trips )\")\n",
     "    \n",
     "    labels_tp_eb = data_eb['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
     "    values_tp_eb = data_eb['Trip_purpose'].value_counts(dropna=True).tolist()\n",
-    "    df_purpose_trip_eb = process_trip_data(labels_tp_eb, values_tp_eb, \"Labeled by user \\n e-bike specific Purpose Trips\")\n",
+    "    df_purpose_trip_eb = process_trip_data(labels_tp_eb, values_tp_eb, f\"Labeled by user for {mode_of_interest} \\n (Based on {mode_of_interest} related Purpose Trips)\")\n",
     "    \n",
     "    all_tp_data_frames = [df_purpose_trip,df_purpose_trip_eb]\n",
     "    result_tp_df = merge_dataframes(all_tp_data_frames)\n",
     "    \n",
-    "    stacked_bar_chart_generic(plot_title_no_quality, result_tp_df, file_name, 2)\n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text + \"\\n\" + quality_text_specific\n",
+    "    stacked_bar_chart_generic(plot_title, result_tp_df, file_name, 2)\n",
     "    alt_text = store_alt_text_stacked_bar_chart(result_tp_df[result_tp_df['Count'] > 0], file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
@@ -397,9 +398,9 @@
     "try:\n",
     "    labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
     "    values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
+    "    df_replaced_trip = process_trip_data(labels_eb, values_eb, f\"Labeled by user for {mode_of_interest} \\n (Based on Replaced mode)\")\n",
     "\n",
-    "    df_replaced_trip = process_trip_data(labels_eb, values_eb, \"Replaced number of trips by e-bike\")\n",
-    "\n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text_specific\n",
     "    stacked_bar_chart_generic(plot_title, df_replaced_trip, file_name, 1)\n",
     "    alt_text = store_alt_text_stacked_bar_chart(df_replaced_trip, file_name, plot_title)\n",
     "except:\n",
@@ -422,8 +423,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality=f\"Distribution of \"+label_units+f\" Replaced by {mode_of_interest}\"\n",
-    "file_name =f'miles_{mode_of_interest}_replaced_mode%s' % file_suffix\n",
+    "plot_title_no_quality=f\"Distribution of \"+label_units+f\" replaced by {mode_of_interest}\"\n",
+    "file_name =f'distance_{mode_of_interest}_replaced_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
     "    dg=data_eb.groupby('Replaced_mode').agg({distance_col: ['sum', 'count' , 'mean']},)\n",
@@ -440,9 +441,9 @@
     "        labels_m.append(x)\n",
     "        values_m.append(y)\n",
     "\n",
-    "    df_replaced_dist = process_trip_data(labels_m, values_m, \"Replaced distance by e-bike\")\n",
+    "    df_replaced_dist = process_trip_data(labels_m, values_m, f\"Labeled by user for {mode_of_interest} \\n (Based on Replaced mode distance)\")\n",
     "\n",
-    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text_specific\n",
     "    stacked_bar_chart_generic(plot_title, df_replaced_dist, file_name, 1)\n",
     "    alt_text = store_alt_text_stacked_bar_chart(df_replaced_dist, file_name, plot_title)\n",
     "except:\n",
