Update merged_debug_df to appropriate functions.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -119,7 +119,10 @@
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            include_test_users,\n",
-    "                                                                            sensed_algo_prefix)"
+    "                                                                            sensed_algo_prefix)\n",
+    "\n",
+    "# Create a combined debug df from Generic and Sensed Metrics\n",
+    "merged_debug_df = debug_df.combine_first(debug_df_sensed)"
    ]
   },
   {
@@ -176,8 +179,8 @@
     "\n",
     "    alt_text = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)  \n",
     "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+    "    generate_missing_plot(plot_title_no_quality,merged_debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
@@ -227,8 +230,8 @@
     "\n",
     "    alt_text = store_alt_text_stacked_bar_chart(result_df_u80[result_df_u80['Count'] > 0], file_name, plot_title)\n",
     "except Exception as e:\n",
-    "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+    "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
@@ -335,8 +338,8 @@
     "\n",
     "    alt_text = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)\n",
     "except Exception as e:\n",
-    "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+    "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
@@ -373,8 +376,8 @@
     "    stacked_bar_chart_generic(plot_title, result_tp_df, file_name, 2)\n",
     "    alt_text = store_alt_text_stacked_bar_chart(result_tp_df[result_tp_df['Count'] > 0], file_name, plot_title)\n",
     "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+    "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
@@ -605,8 +608,8 @@
     "    barplot_mode(data,x,y,plot_title, expanded_ct_sensed['primary_mode'].dropna().unique().tolist(), file_name)\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average ('+label_units_lower+')'].values, data['primary_mode']), file_name, plot_title)\n",
     "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality) "
+    "    generate_missing_plot(plot_title_no_quality,debug_df_sensed,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df_sensed, file_name, plot_title_no_quality) "
    ]
   },
   {
@@ -641,8 +644,8 @@
     "    barplot_day(data,x,y,plot_title,file_name)\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month']), file_name, plot_title)\n",
     "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+    "    generate_missing_plot(plot_title_no_quality,debug_df_sensed,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df_sensed, file_name, plot_title_no_quality)"
    ]
   },
   {
@@ -678,8 +681,8 @@
     "    barplot_day(data,x,y,plot_title,file_name)\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday']), file_name, plot_title)\n",
     "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+    "    generate_missing_plot(plot_title_no_quality,debug_df_sensed,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df_sensed, file_name, plot_title_no_quality)"
    ]
   },
   {
