Update all Stacked Bar Charts to store both alt_text and alt_html files with a single function.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -177,7 +177,7 @@
     "    plot_title = plot_title_no_quality + \"\\n\" + quality_text\n",
     "    stacked_bar_chart_generic(plot_title, result_df, file_name, 2)\n",
     "\n",
-    "    alt_text = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)  \n",
+    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)  \n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,merged_debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
@@ -228,7 +228,7 @@
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Sensed: \" + u80_quality_text_sensed + \"\\n\" + \"For Labeled: \" + u80_quality_text\n",
     "    stacked_bar_chart_generic(plot_title, result_df_u80, file_name, 2)\n",
     "\n",
-    "    alt_text = store_alt_text_stacked_bar_chart(result_df_u80[result_df_u80['Count'] > 0], file_name, plot_title)\n",
+    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df_u80[result_df_u80['Count'] > 0], file_name, plot_title)\n",
     "except Exception as e:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
@@ -268,7 +268,7 @@
     "    plot_title = plot_title_no_quality + \"\\n\" + commute_quality_text\n",
     "    stacked_bar_chart_generic(plot_title, df_total_trip_commute, file_name, 1)\n",
     "\n",
-    "    alt_text = store_alt_text_stacked_bar_chart(df_total_trip_commute, file_name, plot_title)\n",
+    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(df_total_trip_commute, file_name, plot_title)\n",
     "except Exception as e:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -336,7 +336,7 @@
     "    print(plot_title)\n",
     "    stacked_bar_chart_generic(plot_title, result_df, file_name, 3)\n",
     "\n",
-    "    alt_text = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)\n",
+    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)\n",
     "except Exception as e:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
@@ -374,7 +374,7 @@
     "    \n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text + \"\\n\" + quality_text_specific\n",
     "    stacked_bar_chart_generic(plot_title, result_tp_df, file_name, 2)\n",
-    "    alt_text = store_alt_text_stacked_bar_chart(result_tp_df[result_tp_df['Count'] > 0], file_name, plot_title)\n",
+    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_tp_df[result_tp_df['Count'] > 0], file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
@@ -405,7 +405,7 @@
     "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text_specific\n",
     "    stacked_bar_chart_generic(plot_title, df_replaced_trip, file_name, 1)\n",
-    "    alt_text = store_alt_text_stacked_bar_chart(df_replaced_trip, file_name, plot_title)\n",
+    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(df_replaced_trip, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -448,7 +448,7 @@
     "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text_specific\n",
     "    stacked_bar_chart_generic(plot_title, df_replaced_dist, file_name, 1)\n",
-    "    alt_text = store_alt_text_stacked_bar_chart(df_replaced_dist, file_name, plot_title)\n",
+    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(df_replaced_dist, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
