Refactor Stacked Bar Chart 1. Now handles case when we have only one avaialble df.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -159,24 +159,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = f'ntrips_total{file_suffix}'\n",
+    "def process_data_frame(data_frame, column_name, title):\n",
+    "    labels = data_frame[column_name].value_counts(dropna=True).keys().tolist()\n",
+    "    values = data_frame[column_name].value_counts(dropna=True).tolist()\n",
+    "    return process_trip_data(labels, values, title)\n",
+    "\n",
     "plot_title_no_quality= \"Number of trips for each mode (selected by users)\"\n",
+    "file_name = f'ntrips_total{file_suffix}'\n",
     "\n",
     "try:\n",
-    "    labels_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True).keys().tolist()\n",
-    "    values_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True).tolist()\n",
-    "    df_confirmed_tc = process_trip_data(labels_mc, values_mc, \"Labeled by user \\n (Based on Confirmed Trips)\")\n",
-    "    \n",
-    "    labels_pm_sensed = expanded_ct_sensed['primary_mode'].value_counts(dropna=True).keys().tolist()\n",
-    "    values_pm_sensed = expanded_ct_sensed['primary_mode'].value_counts(dropna=True).tolist()\n",
-    "    df_sensed_tc = process_trip_data(labels_pm_sensed, values_pm_sensed, \"Sensed by OpenPATH \\n (Based on Total Trips)\")\\\n",
+    "    bar_count = 0\n",
+    "    df_confirmed_tc = process_data_frame(expanded_ct, 'Mode_confirm', \"Labeled by user \\n (Based on Confirmed Trips)\")\n",
+    "    df_sensed_tc = process_data_frame(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH \\n (Based on Total Trips)\")\n",
     "    \n",
     "    all_data_frames = [df_confirmed_tc,df_sensed_tc]\n",
     "    result_df = merge_dataframes(all_data_frames)\n",
-    "\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + quality_text\n",
-    "    stacked_bar_chart_generic(plot_title, result_df, file_name, 2)\n",
+    "    if not expanded_ct.empty:\n",
+    "        bar_count += 1\n",
+    "    if not expanded_ct_sensed.empty:\n",
+    "        bar_count += 1\n",
     "\n",
+    "    stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)  \n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,merged_debug_df,file_name)\n",
