--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -202,38 +202,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = f'ntrips_under80{file_suffix}'\n",
-    "plot_title_no_quality= \"Number of trips for 80th percentile for each mode (selected by users):\"\n",
-    "\n",
-    "try:\n",
-    "    cutoff = expanded_ct.distance.quantile(0.8)\n",
+    "def process_data_for_cutoff(data_frame, distance_col, mode_col, quality_func, label_title):\n",
+    "    \n",
+    "    cutoff = data_frame.distance.quantile(0.8)\n",
     "    if pd.isna(cutoff):\n",
     "        cutoff = 0\n",
-    "    dist_threshold = expanded_ct[distance_col].quantile(0.8).round(1)\n",
+    "\n",
+    "    dist_threshold = data_frame[distance_col].quantile(0.8).round(1)\n",
     "    dist_threshold = str(dist_threshold)\n",
-    "    labels_mc_u80 = expanded_ct.loc[(expanded_ct['distance'] <= cutoff)].Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
-    "    values_mc_u80 = expanded_ct.loc[(expanded_ct['distance'] <= cutoff)].Mode_confirm.value_counts(dropna=True).tolist()\n",
-    "    u80_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"< \" + dist_threshold + \" \" + short_label, include_test_users)\n",
-    "    df_confirmed_tc_u80 = process_trip_data(labels_mc_u80, values_mc_u80, \"Labeled by user \\n (Based on Confirmed Trips)\")\n",
     "    \n",
-    "    cutoff_sensed = expanded_ct_sensed.distance.quantile(0.8)\n",
-    "    if pd.isna(cutoff_sensed):\n",
-    "        cutoff_sensed = 0\n",
-    "    dist_threshold_sensed = expanded_ct_sensed[distance_col].quantile(0.8).round(1)\n",
-    "    dist_threshold_sensed = str(dist_threshold_sensed)\n",
-    "    labels_pm_u80 = expanded_ct_sensed.loc[(expanded_ct_sensed['distance'] <= cutoff_sensed)].primary_mode.value_counts(dropna=True).keys().tolist()\n",
-    "    values_pm_u80 = expanded_ct_sensed.loc[(expanded_ct_sensed['distance'] <= cutoff_sensed)].primary_mode.value_counts(dropna=True).tolist()\n",
+    "    labels = data_frame.loc[(data_frame['distance'] <= cutoff)][mode_col].value_counts(dropna=True).keys().tolist()\n",
+    "    values = data_frame.loc[(data_frame['distance'] <= cutoff)][mode_col].value_counts(dropna=True).tolist()\n",
+    "    processed_data = process_trip_data(labels, values, label_title)    \n",
+    "    \n",
+    "    return processed_data,cutoff, dist_threshold\n",
+    "\n",
+    "plot_title_no_quality= \"Number of trips for 80th percentile for each mode (selected by users):\"\n",
+    "file_name = f'ntrips_under80{file_suffix}'\n",
+    "\n",
+    "try:\n",
+    "    bar_count = 0\n",
+    "    df_confirmed_tc_u80,cutoff, dist_threshold  = process_data_for_cutoff(expanded_ct, distance_col, 'Mode_confirm', scaffolding.get_quality_text, \"Labeled by user \\n (Based on Confirmed Trips)\")\n",
+    "    df_sensed_tc_u80, cutoff_sensed, dist_threshold_sensed = process_data_for_cutoff(expanded_ct_sensed, distance_col, 'primary_mode', scaffolding.get_quality_text_sensed, \"Sensed by OpenPATH \\n (Based on Total Trips)\")\n",
+    "    u80_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"< \" + dist_threshold + \" \" + short_label, include_test_users)\n",
     "    u80_quality_text_sensed = scaffolding.get_quality_text_sensed(expanded_ct_sensed[expanded_ct_sensed['distance'] <= cutoff_sensed], \"<= \" + dist_threshold_sensed + \" \" + short_label , include_test_users)\n",
-    "    df_sensed_tc_u80 = process_trip_data(labels_pm_u80, values_pm_u80,\"Sensed by OpenPATH \\n (Based on Total Trips)\")\n",
-    "\n",
     "    all_data_frames_u80 = [df_confirmed_tc_u80, df_sensed_tc_u80]\n",
+    "    \n",
     "    result_df_u80 = merge_dataframes(all_data_frames_u80)\n",
+    "    plot_title = plot_title_no_quality \n",
+    "    if not df_confirmed_tc_u80.empty:\n",
+    "        plot_title +=  \"\\n\" + \"For Sensed: \" + u80_quality_text\n",
+    "        bar_count += 1\n",
+    "    if not df_sensed_tc_u80.empty:\n",
+    "        plot_title +=  \"\\n\" + \"For Labeled: \" + u80_quality_text_sensed\n",
+    "        bar_count += 1\n",
     "\n",
-    "    plot_title = plot_title_no_quality + \"\\n\" + \"For Sensed: \" + u80_quality_text_sensed + \"\\n\" + \"For Labeled: \" + u80_quality_text\n",
-    "    stacked_bar_chart_generic(plot_title, result_df_u80, file_name, 2)\n",
-    "\n",
+    "    stacked_bar_chart_generic(plot_title, result_df_u80, file_name, bar_count)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df_u80[result_df_u80['Count'] > 0], file_name, plot_title)\n",
-    "except Exception as e:\n",
+    "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
    ]
