Refactor Stacked Bar Chart 3. Now handles case when we have only one avaialble df.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -259,27 +259,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = f\"ntrips_commute_mode_confirm{file_suffix}\"\n",
     "plot_title_no_quality= \"Number of commute trips for each mode (selected by users)\"\n",
+    "file_name = f\"ntrips_commute_mode_confirm{file_suffix}\"\n",
     "\n",
     "try:\n",
+    "    bar_count = 0\n",
     "    if (len(dynamic_labels)):\n",
     "        purpose_map_label =  scaffolding.mapping_labels(dynamic_labels, \"PURPOSE\")\n",
     "        translation_work = purpose_map_label['work']\n",
     "        trip_purpose_query = f\"Trip_purpose == '{translation_work}'\"\n",
     "    else:\n",
     "        trip_purpose_query = \"Trip_purpose == 'Work'\"\n",
+    "    \n",
+    "    plot_title = plot_title_no_quality\n",
+    "    commute_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct.query(trip_purpose_query), \"commute\", include_test_users)\n",
+    "    if not expanded_ct.empty:\n",
+    "        bar_count += 1\n",
+    "        plot_title += \"\\n\" + commute_quality_text\n",
     "\n",
     "    labels_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
     "    values_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).tolist()\n",
-    "    commute_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct.query(trip_purpose_query), \"commute\", include_test_users)\n",
+    "    \n",
     "    df_total_trip_commute = process_trip_data(labels_mc_commute, values_mc_commute, \"Labeled by user \\n (Based on Confirmed Trips)\")\n",
     "    \n",
-    "    plot_title = plot_title_no_quality + \"\\n\" + commute_quality_text\n",
-    "    stacked_bar_chart_generic(plot_title, df_total_trip_commute, file_name, 1)\n",
-    "\n",
+    "    stacked_bar_chart_generic(plot_title, df_total_trip_commute, file_name, bar_count)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(df_total_trip_commute, file_name, plot_title)\n",
-    "except Exception as e:\n",
+    "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
