Refactor Stacked Bar Chart 4. Now handles case when we have only one avaialble df.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -304,55 +304,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name ='distance_mode%s' % file_suffix\n",
+    "def process_distance_data(data_frame, group_column, distance_column, label_units_lower, quality_text):\n",
+    "    dist = data_frame.groupby(group_column).agg({distance_column: ['sum', 'count', 'mean']})\n",
+    "    dist.columns = ['Total (' + label_units_lower + ')', 'Count', 'Average (' + label_units_lower + ')']\n",
+    "    dist = dist.reset_index()\n",
+    "    dist = dist.sort_values(by=['Total (' + label_units_lower + ')'], ascending=False)\n",
+    "    \n",
+    "    dist_dict = dict(zip(dist[group_column], dist['Total (' + label_units_lower + ')']))\n",
+    "    labels_dist = []\n",
+    "    values_dist = []\n",
+    "    \n",
+    "    for x, y in dist_dict.items():\n",
+    "        labels_dist.append(x)\n",
+    "        values_dist.append(y)\n",
+    "    \n",
+    "    return process_trip_data(labels_dist, values_dist, quality_text)\n",
+    "\n",
     "plot_title_no_quality = label_units + \" for each mode\"\n",
+    "file_name = 'distance_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
-    "    dist = expanded_ct.groupby('Mode_confirm').agg({distance_col: ['sum', 'count' , 'mean']})\n",
-    "    dist.columns = ['Total ('+label_units_lower+')', 'Count', 'Average ('+label_units_lower+')']\n",
-    "    dist = dist.reset_index()\n",
-    "    dist =dist.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
-    "    dist_dict = dict(zip(dist['Mode_confirm'], dist['Total ('+label_units_lower+')']))\n",
-    "    labels_mc_dist = []\n",
-    "    values_mc_dist = []\n",
-    "    for x, y in dist_dict.items():\n",
-    "        labels_mc_dist.append(x)\n",
-    "        values_mc_dist.append(y)    \n",
-    "    df_confirm_dist = process_trip_data(labels_mc_dist, values_mc_dist, \"Labeled by user \\n Trip distance \\n (Based on Confirmed Trips)\")\n",
+    "    bar_count = 0\n",
+    "    df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', distance_col, label_units_lower, \"Labeled by user \\n Trip distance \\n (Based on Confirmed Trips)\")\n",
+    "    df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', distance_col, label_units_lower, \"Sensed by OpenPATH \\n Trip distance (Overall) \\n (Based on Total Trips)\")\n",
+    "    df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode', distance_col, label_units_lower, \"Sensed by OpenPATH \\n Trips distance (Land) \\n (Based on Total Trips)\")\n",
+    "    \n",
+    "    all_data_frames = [df_confirm_dist, df_sensed_dist, df_sensed_dist_land]\n",
+    "    result_df = merge_dataframes(all_data_frames)\n",
     "\n",
-    "    dist_sensed = expanded_ct_sensed.groupby('primary_mode').agg({distance_col: ['sum', 'count' , 'mean']})\n",
-    "    dist_sensed.columns = ['Total ('+label_units_lower+')', 'Count', 'Average ('+label_units_lower+')']\n",
-    "    dist_sensed = dist_sensed.reset_index()\n",
-    "    dist_sensed = dist_sensed.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
-    "    dist_dict_sensed = dict(zip(dist_sensed['primary_mode'], dist_sensed['Total ('+label_units_lower+')']))\n",
-    "    labels_pm_dist = []\n",
-    "    values_pm_dist = []\n",
-    "    for x, y in dist_dict_sensed.items():\n",
-    "        labels_pm_dist.append(x)\n",
-    "        values_pm_dist.append(y)\n",
-    "    df_sensed_dist = process_trip_data(labels_pm_dist, values_pm_dist, \"Sensed by OpenPATH \\n Trip distance (Overall) \\n (Based on Total Trips)\")\n",
+    "    if not df_confirm_dist.empty:\n",
+    "        bar_count += 1\n",
+    "    if not df_sensed_dist.empty:\n",
+    "        bar_count += 1\n",
+    "    if not df_sensed_dist_land.empty:\n",
+    "        bar_count += 1\n",
+    "    \n",
     "    plot_title = plot_title_no_quality + \"\\n\" + quality_text\n",
     "\n",
-    "    dist_sensed_land = expanded_ct_sensed.groupby('primary_mode').agg({distance_col: ['sum', 'count' , 'mean']})\n",
-    "    dist_sensed_land.columns = ['Total ('+label_units_lower+')', 'Count', 'Average ('+label_units_lower+')']\n",
-    "    dist_sensed_land = dist_sensed_land.reset_index()\n",
-    "    dist_sensed_land =dist_sensed_land.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
-    "    dist_dict_sensed_land = dict(zip(dist_sensed_land['primary_mode'], dist_sensed_land['Total ('+label_units_lower+')']))\n",
-    "    labels_pm_dist_land = []\n",
-    "    values_pm_dist_land = []\n",
-    "    for x, y in dist_dict_sensed_land.items():\n",
-    "        if x != \"AIR_OR_HSR\":\n",
-    "            labels_pm_dist_land.append(x)\n",
-    "            values_pm_dist_land.append(y)\n",
-    "    df_sensed_dist_land = process_trip_data(labels_pm_dist_land, values_pm_dist_land, \"Sensed by OpenPATH \\n Trips distance (Land) \\n (Based on Total Trips)\")\n",
-    "    \n",
-    "    all_data_frames = [df_confirm_dist,df_sensed_dist, df_sensed_dist_land]\n",
-    "    result_df = merge_dataframes(all_data_frames)\n",
-    "    print(plot_title)\n",
-    "    stacked_bar_chart_generic(plot_title, result_df, file_name, 3)\n",
-    "\n",
+    "    stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)\n",
-    "except Exception as e:\n",
+    "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
    ]
