--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -363,23 +363,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality=\"Number of trips for each purpose (selected by users)\"\n",
-    "file_name= 'ntrips_purpose%s' % file_suffix\n",
+    "def process_trip_purpose_data(data_frame, purpose_column, label_text):\n",
+    "    labels = data_frame[purpose_column].value_counts(dropna=True).keys().tolist()\n",
+    "    values = data_frame[purpose_column].value_counts(dropna=True).tolist()\n",
+    "    \n",
+    "    return process_trip_data(labels, values, label_text)\n",
+    "\n",
+    "plot_title_no_quality = \"Number of trips for each purpose (selected by users)\"\n",
+    "file_name = 'ntrips_purpose%s' %(file_suffix)\n",
     "\n",
     "try:\n",
-    "    labels_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
-    "    values_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True).tolist()\n",
-    "    df_purpose_trip = process_trip_data(labels_tp, values_tp, \"Labeled by user \\n (Based on Total Purpose Trips )\")\n",
-    "    \n",
-    "    labels_tp_eb = data_eb['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
-    "    values_tp_eb = data_eb['Trip_purpose'].value_counts(dropna=True).tolist()\n",
-    "    df_purpose_trip_eb = process_trip_data(labels_tp_eb, values_tp_eb, f\"Labeled by user for {mode_of_interest} \\n (Based on {mode_of_interest} related Purpose Trips)\")\n",
-    "    \n",
-    "    all_tp_data_frames = [df_purpose_trip,df_purpose_trip_eb]\n",
+    "    bar_count = 0\n",
+    "    df_purpose_trip = process_trip_purpose_data(expanded_ct, 'Trip_purpose', \"Labeled by user \\n (Based on Confirmed Trips )\")\n",
+    "    df_purpose_trip_eb = process_trip_purpose_data(data_eb, 'Trip_purpose', f\"Labeled by user for {mode_of_interest} \\n (Based on {mode_of_interest} related Purpose Trips)\")\n",
+    "    all_tp_data_frames = [df_purpose_trip, df_purpose_trip_eb]\n",
     "    result_tp_df = merge_dataframes(all_tp_data_frames)\n",
+    "\n",
+    "    plot_title = plot_title_no_quality\n",
     "    \n",
-    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text + \"\\n\" + quality_text_specific\n",
-    "    stacked_bar_chart_generic(plot_title, result_tp_df, file_name, 2)\n",
+    "    if not df_purpose_trip.empty:\n",
+    "        plot_title += \"\\n\" + quality_text\n",
+    "        bar_count += 1\n",
+    "    if not df_purpose_trip_eb.empty:\n",
+    "        plot_title += \"\\n\" + quality_text_specific\n",
+    "        bar_count += 1\n",
+    "\n",
+    "    stacked_bar_chart_generic(plot_title, result_tp_df, file_name, bar_count)\n",
+    "\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_tp_df[result_tp_df['Count'] > 0], file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
