--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -412,16 +412,19 @@
    "outputs": [],
    "source": [
     "plot_title_no_quality=f\"Number of trips for each replaced mode by {mode_of_interest} only\"\n",
-    "file_name= f'ntrips_{mode_of_interest}_replaced%s' % file_suffix\n",
+    "file_name= f'ntrips_{mode_of_interest}_replaced_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
-    "    labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
-    "    values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
-    "    df_replaced_trip = process_trip_data(labels_eb, values_eb, f\"Labeled by user for {mode_of_interest} \\n (Based on Replaced mode)\")\n",
-    "\n",
-    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text_specific\n",
-    "    stacked_bar_chart_generic(plot_title, df_replaced_trip, file_name, 1)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(df_replaced_trip, file_name, plot_title)\n",
+    "    bar_count = 0\n",
+    "    if not data_eb.empty:\n",
+    "        bar_count += 1\n",
+    "        labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
+    "        values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
+    "        df_replaced_trip = process_trip_data(labels_eb, values_eb, f\"Labeled by user for {mode_of_interest} \\n (Based on Replaced mode)\")\n",
+    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text_specific\n",
+    "        \n",
+    "        stacked_bar_chart_generic(plot_title, df_replaced_trip, file_name, bar_count)\n",
+    "        alt_text, alt_html = store_alt_text_stacked_bar_chart(df_replaced_trip, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
