--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -449,25 +449,29 @@
     "file_name =f'distance_{mode_of_interest}_replaced_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
-    "    dg=data_eb.groupby('Replaced_mode').agg({distance_col: ['sum', 'count' , 'mean']},)\n",
-    "    dg.columns = ['Total ('+label_units_lower+')', 'Count' ,'Average ('+label_units_lower+')']\n",
-    "    dg = dg.reset_index()\n",
-    "    dg = dg.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
+    "    bar_count = 0\n",
+    "    if not data_eb.empty:\n",
+    "        bar_count += 1\n",
+    "        dg=data_eb.groupby('Replaced_mode').agg({distance_col: ['sum', 'count' , 'mean']},)\n",
+    "        dg.columns = ['Total ('+label_units_lower+')', 'Count' ,'Average ('+label_units_lower+')']\n",
+    "        dg = dg.reset_index()\n",
+    "        dg = dg.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
     "\n",
-    "    dg_dict = dict(zip(dg['Replaced_mode'], dg['Total ('+label_units_lower+')']))\n",
-    "    \n",
-    "    labels_m = []\n",
-    "    values_m = []\n",
+    "        dg_dict = dict(zip(dg['Replaced_mode'], dg['Total ('+label_units_lower+')']))\n",
     "\n",
-    "    for x, y in dg_dict.items():\n",
-    "        labels_m.append(x)\n",
-    "        values_m.append(y)\n",
+    "        labels_m = []\n",
+    "        values_m = []\n",
     "\n",
-    "    df_replaced_dist = process_trip_data(labels_m, values_m, f\"Labeled by user for {mode_of_interest} \\n (Based on Replaced mode distance)\")\n",
+    "        for x, y in dg_dict.items():\n",
+    "            labels_m.append(x)\n",
+    "            values_m.append(y)\n",
     "\n",
-    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text_specific\n",
-    "    stacked_bar_chart_generic(plot_title, df_replaced_dist, file_name, 1)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(df_replaced_dist, file_name, plot_title)\n",
+    "        df_replaced_dist = process_trip_data(labels_m, values_m, f\"Labeled by user for {mode_of_interest} \\n (Based on Replaced mode distance)\")\n",
+    "\n",
+    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text_specific\n",
+    "\n",
+    "        stacked_bar_chart_generic(plot_title, df_replaced_dist, file_name, bar_count)\n",
+    "        alt_text, alt_html = store_alt_text_stacked_bar_chart(df_replaced_dist, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
