Update dist block for average_miles_mode_confirm.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -29,7 +29,7 @@
     "month = 11\n",
     "program = \"default\"\n",
     "study_type = \"study\"\n",
-    "mode_of_interest = \"None\"\n",
+    "mode_of_interest = None\n",
     "include_test_users = False\n",
     "dynamic_labels = {}\n",
     "use_imperial = False\n",
@@ -504,6 +504,11 @@
     "plot_title_no_quality=\"Average \"+ label_units+\" for each mode with > 3 entries\"\n",
     "\n",
     "try:\n",
+    "    dist = expanded_ct.groupby('Mode_confirm').agg({distance_col: ['sum', 'count' , 'mean']})\n",
+    "    dist.columns = ['Total ('+label_units_lower+')', 'Count', 'Average ('+label_units_lower+')']\n",
+    "    dist = dist.reset_index()\n",
+    "    dist =dist.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
+    "\n",
     "    x='Mode_confirm'\n",
     "    y='Average ('+label_units_lower+')'\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
