--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -169,15 +169,23 @@
     "\n",
     "try:\n",
     "    bar_count = 0\n",
+    "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \"+ quality_text\n",
     "    df_confirmed_tc = process_data_frame(expanded_ct, 'Mode_confirm', \"Labeled by user \\n (Based on Confirmed Trips)\")\n",
     "    df_sensed_tc = process_data_frame(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH \\n (Based on Total Trips)\")\n",
-    "    \n",
     "    all_data_frames = [df_confirmed_tc,df_sensed_tc]\n",
+    "    \n",
+    "    if not data_eb.empty:\n",
+    "        df_replaced_tc = process_data_frame(data_eb, 'Replaced_mode', f\"Labeled by user for {mode_of_interest} \\n (Based on Replaced mode)\" )\n",
+    "        all_data_frames.append(df_replaced_tc)\n",
+    "        if not df_replaced_tc.empty:\n",
+    "            bar_count += 1\n",
+    "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text_specific\n",
+    "        \n",
     "    result_df = merge_dataframes(all_data_frames)\n",
-    "    plot_title = plot_title_no_quality + \"\\n\" + quality_text\n",
-    "    if not expanded_ct.empty:\n",
+    "\n",
+    "    if not df_confirmed_tc.empty:\n",
     "        bar_count += 1\n",
-    "    if not expanded_ct_sensed.empty:\n",
+    "    if not df_sensed_tc.empty:\n",
     "        bar_count += 1\n",
     "\n",
     "    stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
@@ -328,9 +336,8 @@
     "    df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', distance_col, label_units_lower, \"Labeled by user \\n Trip distance \\n (Based on Confirmed Trips)\")\n",
     "    df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', distance_col, label_units_lower, \"Sensed by OpenPATH \\n Trip distance (Overall) \\n (Based on Total Trips)\")\n",
     "    df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode', distance_col, label_units_lower, \"Sensed by OpenPATH \\n Trips distance (Land) \\n (Based on Total Trips)\")\n",
-    "    \n",
+    "\n",
     "    all_data_frames = [df_confirm_dist, df_sensed_dist, df_sensed_dist_land]\n",
-    "    result_df = merge_dataframes(all_data_frames)\n",
     "\n",
     "    if not df_confirm_dist.empty:\n",
     "        bar_count += 1\n",
@@ -340,6 +347,15 @@
     "        bar_count += 1\n",
     "    \n",
     "    plot_title = plot_title_no_quality + \"\\n\" + quality_text\n",
+    "\n",
+    "    if not data_eb.empty:\n",
+    "        df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', distance_col, label_units_lower, f\"Labeled by user for {mode_of_interest} \\n (Based on Replaced mode distance)\")\n",
+    "        all_data_frames.append(df_replaced_dist)\n",
+    "        if not df_replaced_dist.empty:\n",
+    "            bar_count += 1\n",
+    "            plot_title += \"\\n\" + f\"For {mode_of_interest}:\" + quality_text_specific\n",
+    "\n",
+    "    result_df = merge_dataframes(all_data_frames)\n",
     "\n",
     "    stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)\n",
@@ -394,87 +410,6 @@
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3e2e8d8c",
-   "metadata": {},
-   "source": [
-    "### 6. 100% Stacked Bar Charts (Represents Number of trips based on Replaced mode)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4cc86684",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_title_no_quality=f\"Number of trips for each replaced mode by {mode_of_interest} only\"\n",
-    "file_name= f'ntrips_{mode_of_interest}_replaced_mode%s' % file_suffix\n",
-    "\n",
-    "try:\n",
-    "    bar_count = 0\n",
-    "    if not data_eb.empty:\n",
-    "        bar_count += 1\n",
-    "        labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
-    "        values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
-    "        df_replaced_trip = process_trip_data(labels_eb, values_eb, f\"Labeled by user for {mode_of_interest} \\n (Based on Replaced mode)\")\n",
-    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text_specific\n",
-    "        \n",
-    "        stacked_bar_chart_generic(plot_title, df_replaced_trip, file_name, bar_count)\n",
-    "        alt_text, alt_html = store_alt_text_stacked_bar_chart(df_replaced_trip, file_name, plot_title)\n",
-    "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f5575b8d",
-   "metadata": {},
-   "source": [
-    "### 7. 100% Stacked Bar Charts (Represents Trip Distance based on Replaced mode ) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48c131c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_title_no_quality=f\"Distribution of \"+label_units+f\" replaced by {mode_of_interest}\"\n",
-    "file_name =f'distance_{mode_of_interest}_replaced_mode%s' % file_suffix\n",
-    "\n",
-    "try:\n",
-    "    bar_count = 0\n",
-    "    if not data_eb.empty:\n",
-    "        bar_count += 1\n",
-    "        dg=data_eb.groupby('Replaced_mode').agg({distance_col: ['sum', 'count' , 'mean']},)\n",
-    "        dg.columns = ['Total ('+label_units_lower+')', 'Count' ,'Average ('+label_units_lower+')']\n",
-    "        dg = dg.reset_index()\n",
-    "        dg = dg.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
-    "\n",
-    "        dg_dict = dict(zip(dg['Replaced_mode'], dg['Total ('+label_units_lower+')']))\n",
-    "\n",
-    "        labels_m = []\n",
-    "        values_m = []\n",
-    "\n",
-    "        for x, y in dg_dict.items():\n",
-    "            labels_m.append(x)\n",
-    "            values_m.append(y)\n",
-    "\n",
-    "        df_replaced_dist = process_trip_data(labels_m, values_m, f\"Labeled by user for {mode_of_interest} \\n (Based on Replaced mode distance)\")\n",
-    "\n",
-    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text_specific\n",
-    "\n",
-    "        stacked_bar_chart_generic(plot_title, df_replaced_dist, file_name, bar_count)\n",
-    "        alt_text, alt_html = store_alt_text_stacked_bar_chart(df_replaced_dist, file_name, plot_title)\n",
-    "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
