--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -29,7 +29,7 @@
     "month = 11\n",
     "program = \"default\"\n",
     "study_type = \"study\"\n",
-    "mode_of_interest = None\n",
+    "mode_of_interest = \"e-bike\"\n",
     "include_test_users = False\n",
     "dynamic_labels = {}\n",
     "use_imperial = False\n",
