Update <= for the cutoff.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -232,7 +232,7 @@
     "    bar_count = 0\n",
     "    df_confirmed_tc_u80,cutoff, dist_threshold  = process_data_for_cutoff(expanded_ct, distance_col, 'Mode_confirm', scaffolding.get_quality_text, \"Labeled by user \\n (Based on Confirmed Trips)\")\n",
     "    df_sensed_tc_u80, cutoff_sensed, dist_threshold_sensed = process_data_for_cutoff(expanded_ct_sensed, distance_col, 'primary_mode', scaffolding.get_quality_text_sensed, \"Sensed by OpenPATH \\n (Based on Total Trips)\")\n",
-    "    u80_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"< \" + dist_threshold + \" \" + short_label, include_test_users)\n",
+    "    u80_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"<= \" + dist_threshold + \" \" + short_label, include_test_users)\n",
     "    u80_quality_text_sensed = scaffolding.get_quality_text_sensed(expanded_ct_sensed[expanded_ct_sensed['distance'] <= cutoff_sensed], \"<= \" + dist_threshold_sensed + \" \" + short_label , include_test_users)\n",
     "    all_data_frames_u80 = [df_confirmed_tc_u80, df_sensed_tc_u80]\n",
     "    \n",
@@ -401,7 +401,7 @@
     "        plot_title += \"\\n\" + quality_text\n",
     "        bar_count += 1\n",
     "    if not df_purpose_trip_eb.empty:\n",
-    "        plot_title += \"\\n\" + quality_text_specific\n",
+    "        plot_title += \"\\n\" + \"For {mode_of_interest}\" + quality_text_specific\n",
     "        bar_count += 1\n",
     "\n",
     "    stacked_bar_chart_generic(plot_title, result_tp_df, file_name, bar_count)\n",
